# OS_MAI-labs

1_lab_os/: Makefile  report.docx
1_lab_os/src/: a.out  child.c  parent.c
2_lab_os/: Makefile  report.odt
2_lab_os/src/: main.c
3_lab_os/: CMakeLists.txt  отчет_3_лаба.docx
3_lab_os/src/: child.cpp  main.cpp
4_lab_os/: отчет_4_лаба.docx
4_lab_os/src/: Makefile  Pi_Leibniz.cpp  Pi_Wallis.cpp  Program_1  Program_1.cpp  Program_2  Program_2.cpp  Square_rect.cpp  Square_tr.cpp
5-7_lab_os/: отчет 5-7 лаба.docx
5-7_lab_os/src/: CMakeLists.txt  computing.cpp  control.cpp  lib.cpp  lib.h
kp/: main.c  reportKP.pdf:Zone.Identifier
